[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Sprites/SpaceConstructions/0069SpaceFactoryCutout3.png" type="Texture" id=1]
[ext_resource path="res://src/SpaceConstructions/Factory.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/SpaceConstructions/0069SpaceFactoryInset2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/SpaceConstructions/0069SpaceFactoryInsetShield.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/SpaceConstructions/shieldsolid.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/SpaceConstructions/0071LandingGuidelines.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 322.002

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 88, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 176, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 264, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 264, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 176, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 88, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 88, 95 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "shield_down",
"speed": 3.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "shield_up",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 88, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 176, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 264, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 352, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 440, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 528, 0, 88, 95 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 616, 0, 88, 95 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "landing_lights",
"speed": 3.0
} ]

[node name="Factory" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="RadarDetector" type="KinematicBody2D" parent="." groups=["station"]]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadarDetector"]
shape = SubResource( 1 )

[node name="DockingArea" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DockingArea"]
shape = SubResource( 2 )

[node name="ProductionTimer" type="Timer" parent="."]

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -111, 32 )
texture = ExtResource( 3 )

[node name="Approach" type="Position2D" parent="."]
position = Vector2( -171, 86 )

[node name="Dock" type="Position2D" parent="."]
position = Vector2( -20, -5 )

[node name="ApproachTween" type="Tween" parent="."]

[node name="DockingTween" type="Tween" parent="."]

[node name="ShieldWall" type="AnimatedSprite" parent="."]
position = Vector2( -110, 33 )
frames = SubResource( 7 )
animation = "shield_up"

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -110, 34 )
texture = ExtResource( 5 )

[node name="LandingLights" type="AnimatedSprite" parent="."]
position = Vector2( -158, 81 )
z_index = -1
frames = SubResource( 20 )
animation = "landing_lights"
